--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -1,13 +1,33 @@
 {% extends 'main.html' %}
 
-
 {% block content %}
-    <h1>Home Template</h1>
 
+<style>
+    .home-container{
+        display: grid;
+        grid-template-columns: 1fr 3fr;
+    }
+</style>
+
+
+<div class="home-container">
 
     <div>
+        <h3>Browse Topics</h3>
+        <hr>
+        <div>
+            <a href = "{% url 'home'%}">ALL</a>
+        </div>
+        {% for topic in topics %}
+            <div>
+                <a href = "{% url 'home'%}?q={{ topic }}">{{ topic.name }}</a>
+            </div>
+        {% endfor %}
+    </div>
 
-    <a href="{% url 'create-room' %}">Create Room</a>
+    <div>
+        <h5>{{ room_count }} rooms available</h5>
+        <a href="{% url 'create-room' %}">Create Room</a>
 
         <div>
             {% for room in rooms %}
@@ -21,7 +41,8 @@
                 </div>
             {% endfor %}
         </div>
-
     </div>
+
+</div>
 
 {% endblock %}
